# grpc-java

examples/android/helloworld/: .gitignore  build.gradle
examples/android/helloworld/app/: build.gradle
examples/android/helloworld/app/src/main/java/io/grpc/helloworldexample/: HelloworldActivity.java  LocalSocketAdapter.java  UnixDomainSocketFactory.java
examples/android/helloworld/app/src/main/jni/: CMakeLists.txt
examples/android/helloworld/app/src/main/jni/libgo/: Makefile  api-android.go  go.mod  go.sum  jni.c
examples/android/helloworld/app/src/main/jni/libgo/service/: greeter.go
examples/android/helloworld/app/src/main/proto/: helloworld.proto
